--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <div id="app">
         <div id="game-container"></div>
+        <meta http-equiv="refresh" content="0;url=https://ndietzucsc.github.io/group10game/dist/index.html" />
+
     </div>
     <!-- <script type="module" src="src/main.js"></script> -->
 </body>
