--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="app">
         <div id="game-container"></div>
-        <meta http-equiv="refresh" content="0;url=https://ndietzucsc.github.io/group10game/dist/index.html" />
+        <meta http-equiv="refresh" content="0;url=/dist/index.html" />
 
     </div>
     <!-- <script type="module" src="src/main.js"></script> -->
